# loopCode

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-package.yml
examples/: loopcode-llm.ini  loopguard-attach.ini  loopguard-llm.ini  loopguard.ini
prompts/: decision-strategy.md  decision-user-template.txt
scripts/: decider-example.ps1  llm-decider.ps1  package.ps1
src/: loopguard_attach.inl  main.cpp
tests/: run-smoke-tests.ps1
